feat: prepare for deployment